fix: window sometimes being too small (#1)
Closes #1

--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,7 @@ body {
 }
 
 .container {
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -34,6 +35,13 @@ body {
   padding: 0.25em;
   display: flex;
   gap: 0.25em;
+}
+
+.canvas {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 button {
